--- a/index.html
+++ b/index.html
@@ -124,13 +124,54 @@
       </div>
     </section>
 
-    <section id="work" aria-labelledby="work-title">
-      <h2 id="work-title">Strategic Initiatives Led</h2>
-      <article class="project">
-        <h3>Enterprise Cloud Landing Zone</h3>
-        <p>Led the definition of an enterprise Azure landing zone strategy, establishing governance, security guardrails, and platform standards.</p>
-      </article>
-    </section>
+    <section id="work" class="case-grid-compact" aria-labelledby="work-title">
+  <h2 id="work-title">Strategic Initiatives Led</h2>
+  <p class="section-note">Selected initiatives — click <strong>More details</strong> for additional information.</p>
+  <div class="grid">    <article class="case-mini" aria-label="Enterprise Cloud Landing Zone">
+      <h3 class="case-title">Enterprise Cloud Landing Zone</h3>
+      <p class="case-desc">Defined an enterprise Azure landing zone strategy with governance, security guardrails, and platform standards.</p>
+      <button class="case-more" type="button" data-modal="cs1">
+        <span>More details</span>
+        <span class="case-more-arrow" aria-hidden="true">→</span>
+      </button>
+    </article>    <article class="case-mini" aria-label="DevSecOps Delivery Standardisation">
+      <h3 class="case-title">DevSecOps Delivery Standardisation</h3>
+      <p class="case-desc">Built reusable CI/CD patterns and security controls to accelerate delivery while reducing operational risk.</p>
+      <button class="case-more" type="button" data-modal="cs2">
+        <span>More details</span>
+        <span class="case-more-arrow" aria-hidden="true">→</span>
+      </button>
+    </article>    <article class="case-mini" aria-label="Cloud Migration Beyond Lift-and-Shift">
+      <h3 class="case-title">Cloud Migration Beyond Lift-and-Shift</h3>
+      <p class="case-desc">Modernisation-led migration approach focused on outcomes, platform readiness, and sustainable operations.</p>
+      <button class="case-more" type="button" data-modal="cs3">
+        <span>More details</span>
+        <span class="case-more-arrow" aria-hidden="true">→</span>
+      </button>
+    </article>    <article class="case-mini" aria-label="Cloud Governance & Cost Controls (FinOps)">
+      <h3 class="case-title">Cloud Governance & Cost Controls (FinOps)</h3>
+      <p class="case-desc">Established guardrails and cost practices to improve accountability, sustainability, and spend visibility.</p>
+      <button class="case-more" type="button" data-modal="cs4">
+        <span>More details</span>
+        <span class="case-more-arrow" aria-hidden="true">→</span>
+      </button>
+    </article>    <article class="case-mini" aria-label="Platform Engineering & Self-Service Enablement">
+      <h3 class="case-title">Platform Engineering & Self-Service Enablement</h3>
+      <p class="case-desc">Designed platform capabilities that reduce cognitive load and enable teams to deliver securely at scale.</p>
+      <button class="case-more" type="button" data-modal="cs5">
+        <span>More details</span>
+        <span class="case-more-arrow" aria-hidden="true">→</span>
+      </button>
+    </article>    <article class="case-mini" aria-label="Technology Roadmapping & Portfolio Advisory">
+      <h3 class="case-title">Technology Roadmapping & Portfolio Advisory</h3>
+      <p class="case-desc">Created multi-year roadmaps aligning platform strategy with business priorities and measurable outcomes.</p>
+      <button class="case-more" type="button" data-modal="cs6">
+        <span>More details</span>
+        <span class="case-more-arrow" aria-hidden="true">→</span>
+      </button>
+    </article>
+  </div>
+</section>
 
     <section id="blog" aria-labelledby="blog-title">
       <h2 id="blog-title">Insights &amp; Thought Leadership</h2>
@@ -143,8 +184,188 @@
         </div>
       </article>
     </section>
+<div class="modal" id="cs1" role="dialog" aria-modal="true" aria-labelledby="cs1-title" hidden>
+  <div class="modal-scrim" data-close="true" aria-hidden="true"></div>
+  <div class="modal-panel" role="document">
+    <div class="modal-head">
+      <div class="modal-head-left">
+        <a class="modal-back" href="#work" data-close="true">← Back to initiatives</a>
+        <h1 id="cs1-title" class="modal-title">Enterprise Cloud Landing Zone</h1>
+      </div>
+      <button class="modal-close" type="button" data-close="true" aria-label="Close">✕</button>
+    </div>
 
-    <footer id="contact" aria-labelledby="contact-title">
+    <div class="modal-body">
+      <h2 class="modal-section">Context</h2>
+      <p>A growing portfolio required a consistent, secure cloud foundation to accelerate onboarding and reduce fragmentation.</p>
+
+      <h2 class="modal-section">My Role</h2>
+      <ul>
+        <li>Defined landing zone target-state architecture (identity, network, management, policy).</li>
+        <li>Aligned security, operations, and delivery stakeholders on guardrails and standards.</li>
+      </ul>
+
+      <h2 class="modal-section">Outcomes</h2>
+      <ul>
+        <li>Standard subscription and connectivity model</li>
+        <li>Policy-as-code guardrails and baseline observability</li>
+        <li>Reusable onboarding guidance and templates</li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="modal" id="cs2" role="dialog" aria-modal="true" aria-labelledby="cs2-title" hidden>
+  <div class="modal-scrim" data-close="true" aria-hidden="true"></div>
+  <div class="modal-panel" role="document">
+    <div class="modal-head">
+      <div class="modal-head-left">
+        <a class="modal-back" href="#work" data-close="true">← Back to initiatives</a>
+        <h1 id="cs2-title" class="modal-title">DevSecOps Delivery Standardisation</h1>
+      </div>
+      <button class="modal-close" type="button" data-close="true" aria-label="Close">✕</button>
+    </div>
+
+    <div class="modal-body">
+      <h2 class="modal-section">Context</h2>
+      <p>Teams used varied pipelines, creating inconsistency in quality gates and security control coverage.</p>
+
+      <h2 class="modal-section">My Role</h2>
+      <ul>
+        <li>Defined standard CI/CD patterns and control framework aligned to security requirements.</li>
+        <li>Partnered with engineering teams to drive adoption and enablement.</li>
+      </ul>
+
+      <h2 class="modal-section">Outcomes</h2>
+      <ul>
+        <li>Reusable pipeline templates</li>
+        <li>Shift-left security controls (SAST, dependencies, secrets)</li>
+        <li>Improved developer experience and reduced late-stage surprises</li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="modal" id="cs3" role="dialog" aria-modal="true" aria-labelledby="cs3-title" hidden>
+  <div class="modal-scrim" data-close="true" aria-hidden="true"></div>
+  <div class="modal-panel" role="document">
+    <div class="modal-head">
+      <div class="modal-head-left">
+        <a class="modal-back" href="#work" data-close="true">← Back to initiatives</a>
+        <h1 id="cs3-title" class="modal-title">Cloud Migration Beyond Lift-and-Shift</h1>
+      </div>
+      <button class="modal-close" type="button" data-close="true" aria-label="Close">✕</button>
+    </div>
+
+    <div class="modal-body">
+      <h2 class="modal-section">Context</h2>
+      <p>Migration needed to deliver business outcomes, not just move infrastructure.</p>
+
+      <h2 class="modal-section">My Role</h2>
+      <ul>
+        <li>Defined modernization-first decision framework and pattern catalogue.</li>
+        <li>Coordinated wave planning and readiness across platform and operations.</li>
+      </ul>
+
+      <h2 class="modal-section">Outcomes</h2>
+      <ul>
+        <li>Wave planning and dependency mapping</li>
+        <li>Modernisation patterns and reference architectures</li>
+        <li>Operational readiness and reliability practices</li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="modal" id="cs4" role="dialog" aria-modal="true" aria-labelledby="cs4-title" hidden>
+  <div class="modal-scrim" data-close="true" aria-hidden="true"></div>
+  <div class="modal-panel" role="document">
+    <div class="modal-head">
+      <div class="modal-head-left">
+        <a class="modal-back" href="#work" data-close="true">← Back to initiatives</a>
+        <h1 id="cs4-title" class="modal-title">Cloud Governance & Cost Controls (FinOps)</h1>
+      </div>
+      <button class="modal-close" type="button" data-close="true" aria-label="Close">✕</button>
+    </div>
+
+    <div class="modal-body">
+      <h2 class="modal-section">Context</h2>
+      <p>Cloud spend increased and required stronger accountability, visibility, and controls.</p>
+
+      <h2 class="modal-section">My Role</h2>
+      <ul>
+        <li>Designed governance model with finance and platform stakeholders.</li>
+        <li>Implemented guardrails and reporting for sustainable consumption.</li>
+      </ul>
+
+      <h2 class="modal-section">Outcomes</h2>
+      <ul>
+        <li>Tagging standards, budgets, and alerting</li>
+        <li>Policy guardrails to prevent drift/waste</li>
+        <li>Cost optimisation playbooks and cadence</li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="modal" id="cs5" role="dialog" aria-modal="true" aria-labelledby="cs5-title" hidden>
+  <div class="modal-scrim" data-close="true" aria-hidden="true"></div>
+  <div class="modal-panel" role="document">
+    <div class="modal-head">
+      <div class="modal-head-left">
+        <a class="modal-back" href="#work" data-close="true">← Back to initiatives</a>
+        <h1 id="cs5-title" class="modal-title">Platform Engineering & Self-Service Enablement</h1>
+      </div>
+      <button class="modal-close" type="button" data-close="true" aria-label="Close">✕</button>
+    </div>
+
+    <div class="modal-body">
+      <h2 class="modal-section">Context</h2>
+      <p>Teams needed safer self-service pathways and reduced cognitive load to deliver faster.</p>
+
+      <h2 class="modal-section">My Role</h2>
+      <ul>
+        <li>Defined platform capabilities and golden paths.</li>
+        <li>Aligned enablement approach to governance and security guardrails.</li>
+      </ul>
+
+      <h2 class="modal-section">Outcomes</h2>
+      <ul>
+        <li>Golden paths and service templates</li>
+        <li>Standard environments and toolchains</li>
+        <li>Documentation and enablement model</li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="modal" id="cs6" role="dialog" aria-modal="true" aria-labelledby="cs6-title" hidden>
+  <div class="modal-scrim" data-close="true" aria-hidden="true"></div>
+  <div class="modal-panel" role="document">
+    <div class="modal-head">
+      <div class="modal-head-left">
+        <a class="modal-back" href="#work" data-close="true">← Back to initiatives</a>
+        <h1 id="cs6-title" class="modal-title">Technology Roadmapping & Portfolio Advisory</h1>
+      </div>
+      <button class="modal-close" type="button" data-close="true" aria-label="Close">✕</button>
+    </div>
+
+    <div class="modal-body">
+      <h2 class="modal-section">Context</h2>
+      <p>Multiple initiatives required sequencing, dependency clarity, and alignment to business priorities.</p>
+
+      <h2 class="modal-section">My Role</h2>
+      <ul>
+        <li>Created multi-year roadmap translating target state to executable milestones.</li>
+        <li>Facilitated stakeholder alignment and governance cadence.</li>
+      </ul>
+
+      <h2 class="modal-section">Outcomes</h2>
+      <ul>
+        <li>Capability mapping and target-state sequencing</li>
+        <li>Dependency mapping and investment themes</li>
+        <li>Governance rhythm and measurable milestones</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+
       <h2 id="contact-title" style="margin-top:0;">Contact</h2>
       <p class="contact-cta">
         <a class="btn-linkedin" href="https://linkedin.com/in/sankum-chandra" target="_blank" rel="noopener noreferrer" aria-label="Let’s Connect on LinkedIn">
@@ -159,5 +380,7 @@
   <script src="js/theme.js"></script>
   <script src="js/menu.js"></script>
   <script src="js/scroll.js"></script>
+
+  <script src="js/modals.js"></script>
 </body>
 </html>
