--- a/case-platform-engineering-self-service.html
+++ b/case-platform-engineering-self-service.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Designing Enterprise Cloud Landing Zones — Insight</title>
+  <title>Platform Engineering & Self-Service Enablement — Case Study</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <meta name="description" content="Insight: Designing Enterprise Cloud Landing Zones" />
+  <meta name="description" content="Case study: Platform Engineering & Self-Service Enablement." />
   <meta name="theme-color" content="#0ea5e9" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -69,26 +69,37 @@
   </div>
 
   
-<main id="main" class="container">
-  <a class="case-back" href="index.html#blog">← Back to Insights</a>
-  <h1>Designing Enterprise Cloud Landing Zones</h1>
-  <p class="subtitle">Principles for scalable, governed, secure cloud foundations</p>
-<section aria-labelledby="overviewTitle">
-  <h2 id="overviewTitle">Overview</h2>
-  <p>This article outlines key principles for designing enterprise cloud landing zones that scale with governance and security built in.</p>
+<main id="main" class="container case-page">
+  <a class="case-back" href="index.html#work">← Back to Strategic Initiatives</a>
+  <h1>Platform Engineering & Self-Service Enablement</h1>
+  <p class="subtitle">Golden Paths | Standard Environments | Enablement</p>
+  <div class="case-tags" aria-label="Tags"><span class="case-tag">Golden paths</span><span class="case-tag">Service templates</span><span class="case-tag">Standard toolchains</span></div>
+<section aria-labelledby="contextTitle">
+  <h2 id="contextTitle">Context</h2>
+  <p>Teams needed safer self-service pathways and reduced cognitive load to deliver faster.</p>
 </section>
-<section aria-labelledby="keyprinciplesTitle">
-  <h2 id="keyprinciplesTitle">Key Principles</h2>
+<section aria-labelledby="myroleTitle">
+  <h2 id="myroleTitle">My Role</h2>
   <ul>
-    <li>Separation of concerns (identity, network, management)</li><li>Policy-as-code guardrails</li><li>Standardised onboarding patterns</li>
+    <li>Defined platform capabilities and golden paths.</li><li>Aligned enablement approach to governance and security guardrails.</li>
   </ul>
 </section>
-<section aria-labelledby="wheretostartTitle">
-  <h2 id="wheretostartTitle">Where to start</h2>
+<section aria-labelledby="outcomesTitle">
+  <h2 id="outcomesTitle">Outcomes</h2>
   <ul>
-    <li>Define target-state and operating model</li><li>Establish baseline controls and observability</li><li>Publish reusable templates and guidance</li>
+    <li>Golden paths and service templates</li><li>Standard environments and toolchains</li><li>Documentation and enablement model</li>
   </ul>
 </section>
+<nav class="case-nav" aria-label="Case study navigation">
+  <a class="case-prev" href="case-cloud-governance-cost-control.html">
+    <span class="nav-kicker">Previous</span>
+    <span class="nav-title">Cloud Governance & Cost Controls (FinOps)</span>
+  </a>
+  <a class="case-next" href="case-technology-roadmap-portfolio-advisory.html">
+    <span class="nav-kicker">Next</span>
+    <span class="nav-title">Technology Roadmapping & Portfolio Advisory</span>
+  </a>
+</nav>
 </main>
 <script src="js/theme.js"></script>
 <script src="js/menu.js"></script>
