--- a/case-cloud-governance-cost-control.html
+++ b/case-cloud-governance-cost-control.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Designing Enterprise Cloud Landing Zones — Insight</title>
+  <title>Cloud Governance & Cost Controls (FinOps) — Case Study</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <meta name="description" content="Insight: Designing Enterprise Cloud Landing Zones" />
+  <meta name="description" content="Case study: Cloud Governance & Cost Controls (FinOps)." />
   <meta name="theme-color" content="#0ea5e9" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -69,26 +69,37 @@
   </div>
 
   
-<main id="main" class="container">
-  <a class="case-back" href="index.html#blog">← Back to Insights</a>
-  <h1>Designing Enterprise Cloud Landing Zones</h1>
-  <p class="subtitle">Principles for scalable, governed, secure cloud foundations</p>
-<section aria-labelledby="overviewTitle">
-  <h2 id="overviewTitle">Overview</h2>
-  <p>This article outlines key principles for designing enterprise cloud landing zones that scale with governance and security built in.</p>
+<main id="main" class="container case-page">
+  <a class="case-back" href="index.html#work">← Back to Strategic Initiatives</a>
+  <h1>Cloud Governance & Cost Controls (FinOps)</h1>
+  <p class="subtitle">Guardrails | Cost Visibility | Sustainable Operations</p>
+  <div class="case-tags" aria-label="Tags"><span class="case-tag">Tagging & budgets</span><span class="case-tag">Guardrails</span><span class="case-tag">Optimisation cadence</span></div>
+<section aria-labelledby="contextTitle">
+  <h2 id="contextTitle">Context</h2>
+  <p>Cloud spend increased and required stronger accountability, visibility, and controls.</p>
 </section>
-<section aria-labelledby="keyprinciplesTitle">
-  <h2 id="keyprinciplesTitle">Key Principles</h2>
+<section aria-labelledby="myroleTitle">
+  <h2 id="myroleTitle">My Role</h2>
   <ul>
-    <li>Separation of concerns (identity, network, management)</li><li>Policy-as-code guardrails</li><li>Standardised onboarding patterns</li>
+    <li>Designed governance model with finance and platform stakeholders.</li><li>Implemented guardrails and reporting for sustainable consumption.</li>
   </ul>
 </section>
-<section aria-labelledby="wheretostartTitle">
-  <h2 id="wheretostartTitle">Where to start</h2>
+<section aria-labelledby="outcomesTitle">
+  <h2 id="outcomesTitle">Outcomes</h2>
   <ul>
-    <li>Define target-state and operating model</li><li>Establish baseline controls and observability</li><li>Publish reusable templates and guidance</li>
+    <li>Tagging standards, budgets, and alerting</li><li>Policy guardrails to prevent drift/waste</li><li>Cost optimisation playbooks and cadence</li>
   </ul>
 </section>
+<nav class="case-nav" aria-label="Case study navigation">
+  <a class="case-prev" href="case-cloud-migration-modernisation.html">
+    <span class="nav-kicker">Previous</span>
+    <span class="nav-title">Cloud Migration Beyond Lift-and-Shift</span>
+  </a>
+  <a class="case-next" href="case-platform-engineering-self-service.html">
+    <span class="nav-kicker">Next</span>
+    <span class="nav-title">Platform Engineering & Self-Service Enablement</span>
+  </a>
+</nav>
 </main>
 <script src="js/theme.js"></script>
 <script src="js/menu.js"></script>
