--- a/case-devsecops-delivery-standardisation.html
+++ b/case-devsecops-delivery-standardisation.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Designing Enterprise Cloud Landing Zones — Insight</title>
+  <title>DevSecOps Delivery Standardisation — Case Study</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <meta name="description" content="Insight: Designing Enterprise Cloud Landing Zones" />
+  <meta name="description" content="Case study: DevSecOps Delivery Standardisation." />
   <meta name="theme-color" content="#0ea5e9" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -69,26 +69,37 @@
   </div>
 
   
-<main id="main" class="container">
-  <a class="case-back" href="index.html#blog">← Back to Insights</a>
-  <h1>Designing Enterprise Cloud Landing Zones</h1>
-  <p class="subtitle">Principles for scalable, governed, secure cloud foundations</p>
-<section aria-labelledby="overviewTitle">
-  <h2 id="overviewTitle">Overview</h2>
-  <p>This article outlines key principles for designing enterprise cloud landing zones that scale with governance and security built in.</p>
+<main id="main" class="container case-page">
+  <a class="case-back" href="index.html#work">← Back to Strategic Initiatives</a>
+  <h1>DevSecOps Delivery Standardisation</h1>
+  <p class="subtitle">CI/CD Patterns | Security Controls | Enablement</p>
+  <div class="case-tags" aria-label="Tags"><span class="case-tag">Pipeline templates</span><span class="case-tag">Shift-left security</span><span class="case-tag">Developer enablement</span></div>
+<section aria-labelledby="contextTitle">
+  <h2 id="contextTitle">Context</h2>
+  <p>Teams used varied pipelines, creating inconsistency in quality gates and security control coverage.</p>
 </section>
-<section aria-labelledby="keyprinciplesTitle">
-  <h2 id="keyprinciplesTitle">Key Principles</h2>
+<section aria-labelledby="myroleTitle">
+  <h2 id="myroleTitle">My Role</h2>
   <ul>
-    <li>Separation of concerns (identity, network, management)</li><li>Policy-as-code guardrails</li><li>Standardised onboarding patterns</li>
+    <li>Defined standard CI/CD patterns and control framework aligned to security requirements.</li><li>Partnered with engineering teams to drive adoption and enablement.</li>
   </ul>
 </section>
-<section aria-labelledby="wheretostartTitle">
-  <h2 id="wheretostartTitle">Where to start</h2>
+<section aria-labelledby="outcomesTitle">
+  <h2 id="outcomesTitle">Outcomes</h2>
   <ul>
-    <li>Define target-state and operating model</li><li>Establish baseline controls and observability</li><li>Publish reusable templates and guidance</li>
+    <li>Reusable pipeline templates</li><li>Shift-left security controls (SAST, dependencies, secrets)</li><li>Improved developer experience and reduced late-stage surprises</li>
   </ul>
 </section>
+<nav class="case-nav" aria-label="Case study navigation">
+  <a class="case-prev" href="case-enterprise-cloud-landing-zone.html">
+    <span class="nav-kicker">Previous</span>
+    <span class="nav-title">Enterprise Cloud Landing Zone</span>
+  </a>
+  <a class="case-next" href="case-cloud-migration-modernisation.html">
+    <span class="nav-kicker">Next</span>
+    <span class="nav-title">Cloud Migration Beyond Lift-and-Shift</span>
+  </a>
+</nav>
 </main>
 <script src="js/theme.js"></script>
 <script src="js/menu.js"></script>
