--- a/zero-trust-in-the-cloud-architecture-beyond-buzzwords.html
+++ b/zero-trust-in-the-cloud-architecture-beyond-buzzwords.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Zero Trust in the Cloud: Architecture Beyond Buzzwords</title>
+  <title>Zero Trust in the Cloud: Architecture Beyond Buzzwords | Santhosh Kumar Chandrashekar</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta name="description" content="Zero Trust in the Cloud: Architecture Beyond Buzzwords — Thought leadership article by Santhosh Kumar." />
   <meta name="theme-color" content="#0ea5e9" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet" />
+
   <link rel="stylesheet" href="css/base.css" />
   <link rel="stylesheet" href="css/layout.css" />
   <link rel="stylesheet" href="css/components.css" />
@@ -17,7 +19,7 @@
 
 <body>
   <a id="top" tabindex="-1"></a>
-  <a href="index.html#main" class="skip-link">Skip to main content</a>
+  <a href="#main" class="skip-link">Skip to main content</a>
 
   <header class="site-header">
     <div class="header-inner">
@@ -35,28 +37,42 @@
     </div>
   </header>
 
-  <main id="main" class="container case-page">
-    <a class="case-back" href="index.html#blog">← Back to Insights</a>
-    <h1>Zero Trust in the Cloud: Architecture Beyond Buzzwords</h1>
-    <p class="subtitle">Enterprise Architecture | Cloud Strategy | Modernisation</p>
+  <main id="main" class="container">
+    <article style="max-width:820px; margin:auto; padding:60px 20px;">
+      <p><a href="index.html#blog">← Back to Insights</a></p>
 
-    <div class='case-hero'><img src='images/zero-trust-in-the-cloud-architecture-beyond-buzzwords.png' alt='Zero Trust in the Cloud: Architecture Beyond Buzzwords diagram'></div>
+      <h1>Zero Trust in the Cloud: Architecture Beyond Buzzwords</h1>
+      <p class="subtitle">Enterprise Architecture | Cloud Strategy | Modernisation</p>
 
-    <section class="case-content">
-      **Zero Trust in the Cloud: Architecture Beyond Buzzwords**  <br><br>*By [Your Name], Senior Enterprise Cloud Architect*<br><br><br><br>---<br><br><br><br>In today’s hyper-connected enterprise environment, “Zero Trust” has become a boardroom imperative. Yet, as executives increasingly demand Zero Trust strategies—especially for cloud-native and hybrid environments—technology leaders must separate foundational architectural principles from fleeting hype. Moving "beyond buzzwords" requires a strategic, business-focused translation of Zero Trust principles into actionable, sustainable cloud architecture.<br><br><br><br>## The Value Proposition: Why Zero Trust, Why Now?<br><br><br><br>Cyber threats are evolving, driven by cloud adoption, remote work, and digital transformation. Traditional perimeter-based security models are no longer effective in protecting complex multi-cloud and hybrid workloads. Zero Trust, with its “never trust, always verify” ethos, aligns with today’s threat landscape and agile business needs by minimizing attack surfaces and enforcing least-privilege access everywhere.<br><br><br><br>For the enterprise, Zero Trust is more than a security upgrade; it is a lever for business resilience, regulatory compliance, and digital confidence—all of which underpin innovation and competitive differentiation.<br><br><br><br>## Core Architectural Tenets: Translating Principles into Practice<br><br><br><br>### 1. Identity and Access Management as a Foundation<br><br><br><br>Identity is now the new perimeter. Effective Zero Trust in the cloud begins with robust Identity and Access Management (IAM): federated identities, strong authentication, and fine-grained access controls. Cloud-native IAM services (such as Azure Active Directory, AWS IAM, or Google Cloud IAM) support dynamic policy enforcement based on user, device, and contextual signals.<br><br><br><br>For enterprise architects, this means harmonizing IAM across multi-cloud platforms through interoperability, conditional access, and adaptive policies—a non-trivial but essential undertaking.<br><br><br><br>### 2. Micro-segmentation and Least-Privilege in the Cloud<br><br><br><br>Zero Trust architectures break apart traditional network perimeters. Micro-segmentation, enforced via cloud-native controls (VPCs, security groups, network security policies), allows workloads, applications, and data to be isolated and protected independently. Least-privilege principles extend to application components, serverless functions, and containers.<br><br><br><br>Architects must design for “deny by default,” applying granular controls that scale as resources dynamically spin up, change, or retire within the cloud estate.<br><br><br><br>### 3. Continuous Verification and Monitoring<br><br><br><br>Verification isn’t a one-time event; it’s a continuous process. Cloud platforms offer telemetry and analytical capabilities that support real-time identity, data, and behavior analysis—for example, leveraging AI-based anomaly detection and Security Information and Event Management (SIEM).<br><br><br><br>Modern architectures must ingest, correlate, and respond to signals across users, APIs, resources, and data flows—integrating detection, alerting, and automated remediation.<br><br><br><br>### 4. Data-Centric Security and Encryption<br><br><br><br>Cloud-based Zero Trust demands a data-centric approach: classify, tag, and encrypt data at rest and in transit. Architects must align data governance with controls that enforce context-aware access—accommodating regulatory requirements (GDPR, HIPAA, PCI DSS) and enterprise data sovereignty concerns.<br><br><br><br>## Strategic Considerations for Enterprise Architects<br><br><br><br>Zero Trust isn’t a one-size-fits-all solution, nor is it achieved through a single vendor’s product suite. Achieving Zero Trust in the cloud requires a holistic approach, combining people, process, and platform change:<br><br><br><br>- **Assessment and Roadmapping:** Conduct Zero Trust maturity assessments; define phased adoption plans mapped to business priorities and risk profiles.<br><br>- **Stakeholder Engagement:** Zero Trust success is cross-functional. Partner with security, networking, application, compliance, and business teams to ensure alignment and accountability.<br><br>- **Governance and Change Management:** Integrate Zero Trust principles into cloud governance, DevSecOps pipelines, and service management frameworks.<br><br>- **Technology Selection and Integration:** Choose cloud-native and third-party solutions that maximize interoperability, automation, and policy consistency across the cloud landscape.<br><br><br><br>## Final Thoughts<br><br><br><br>Zero Trust in the cloud is not a destination, but a journey—one that is as much about enterprise agility and resilience as it is about risk reduction. The architect’s role is to steer stakeholders away from checkbox compliance and toward a business-aligned, adaptive security posture. Realizing the promise of Zero Trust requires strategic vision, disciplined architectural practice, and a relentless focus on delivering continuous value in an ever-changing digital world.<br><br><br><br>As leaders, our goal isn’t merely to build more secure clouds; it is to architect trust that empowers business innovation—responsibly, reliably, and at scale.
-    </section>
+      <figure style="margin:40px 0; text-align:center;">
+        <img src="assets/images/zero-trust-in-the-cloud-architecture-beyond-buzzwords.png"
+             alt="Zero Trust cloud architecture diagram"
+             style="width:100%; border-radius:12px;"
+             loading="lazy" decoding="async">
+      </figure>
 
-    <hr>
+      <p>In today’s hyper-connected enterprise environment, “Zero Trust” has become a boardroom imperative. Yet, as executives increasingly demand Zero Trust strategies—especially for cloud-native and hybrid environments—technology leaders must separate foundational architectural principles from fleeting hype. Moving beyond buzzwords requires a strategic, business-focused translation of Zero Trust principles into actionable, sustainable cloud architecture.</p>
 
-    <section>
-      <h2>LinkedIn Version</h2>
-      <pre id="linkedin">Zero Trust is more than a cloud security buzzword—it’s a necessity for safeguarding modern enterprises. By architecting granular access controls, least-privilege policies, and end-to-end visibility, organizations can minimize risk while accelerating innovation. The payoff? Stronger compliance, streamlined incident response, and enhanced customer trust. As cloud ecosystems grow, let’s move beyond theory and embed Zero Trust principles into every layer of our architecture. The result is a secure, agile foundation that drives business forward. #ZeroTrust #CloudSecurity #EnterpriseArchitecture #Innovation #CyberResilience</pre>
-    </section>
+      <h2>The Value Proposition: Why Zero Trust, Why Now?</h2>
+      <p>Cyber threats are evolving, driven by cloud adoption, remote work, and digital transformation. Traditional perimeter-based security models are no longer effective in protecting complex multi-cloud and hybrid workloads. Zero Trust, with its “never trust, always verify” ethos, aligns with today’s threat landscape and agile business needs by minimizing attack surfaces and enforcing least-privilege access everywhere.</p>
+      <p>For the enterprise, Zero Trust is more than a security upgrade; it is a lever for business resilience, regulatory compliance, and digital confidence—all of which underpin innovation and competitive differentiation.</p>
 
-  </main>
+      <h2>Core Architectural Tenets: Translating Principles into Practice</h2>
 
-  <script src="js/theme.js"></script>
-  <script src="js/menu.js"></script>
-  <script src="js/scroll.js"></script>
-</body>
-</html>
+      <h3>1. Identity and Access Management as a Foundation</h3>
+      <p>Identity is now the new perimeter. Effective Zero Trust in the cloud begins with robust IAM: federated identities, strong authentication, and fine-grained access controls. Cloud-native IAM services support dynamic policy enforcement based on user, device, and contextual signals.</p>
+
+      <h3>2. Micro-segmentation and Least-Privilege in the Cloud</h3>
+      <p>Zero Trust architectures break apart traditional network perimeters. Micro-segmentation allows workloads, applications, and data to be isolated and protected independently. Least-privilege principles extend to application components, serverless functions, and containers.</p>
+
+      <h3>3. Continuous Verification and Monitoring</h3>
+      <p>Verification isn’t a one-time event; it’s continuous. Cloud platforms offer telemetry and analytics that support real-time identity, data, and behavior analysis.</p>
+
+      <h3>4. Data-Centric Security and Encryption</h3>
+      <p>Cloud-based Zero Trust demands a data-centric approach: classify, tag, and encrypt data at rest and in transit while enforcing context-aware access controls.</p>
+
+      <h2>Strategic Considerations for Enterprise Architects</h2>
+      <ul>
+        <li><strong>Assessment and Roadmapping:</strong> Conduct Zero Trust maturity assessments and define phased adoption plans.</li>
+        <li><strong>Stakeholder Engagement:</strong> Partner with security, networking, application, and compliance teams.</li>
+        <li><strong>Governance and Change Management:</strong> Integrate Zero Trust into cloud gove
